--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1178,7 +1178,7 @@ input, select, textarea {
 				bottom: 0;
 				left: 0;
 				width: 100%;
-				color: rgba(255, 255, 255, 0.5);
+/* 				color: rgba(255, 255, 255, 0.5); */
 				z-index: 1;
 			}
 
